Fix navigation menu distortion caused js dependecy resolution problem

--- a/modules/openlmis-web/src/main/webapp/public/less/report.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/report.less
@@ -264,3 +264,32 @@ table.compact {
   min-width: 100%;
   table-layout: fixed;
 }
+
+.report-children  ul
+{
+  margin: 10px;
+  padding: 0;
+  list-style-type: none;
+}
+
+.report-children  ul li { display: inline; list-style-type: square; }
+.report-children  ul li a {
+  background: rgb(0, 185, 204);
+  color: white;
+  padding: 3px;
+  margin: 2px;}
+.report-children {
+  text-align: left;
+  border-bottom: 1px solid #078f97;
+  margin-bottom: 12px;
+  font-size: 12px;
+}
+
+.report-children > a{
+  font-weight: bold;
+}
+#all-report-lists h3{
+  border-bottom: 3px solid #000;
+  margin-bottom: 21px;
+  text-transform: uppercase;
+}
